Fixed scoreboard gap.

--- a/client/app/src/styles/Game.css
+++ b/client/app/src/styles/Game.css
@@ -155,7 +155,7 @@
     display: flex;
     flex-direction: row; /* Places Game and Scoreboard side by side */
     justify-content: center; /* Centers content */ 
-    gap: 5vw; /* Space between Game and Scoreboard */
+    gap: 1vw; /* Space between Game and Scoreboard */
     width: 100%;
     height: 100%;
 }
